# xc

./: Cargo.toml
lib/xc_ast/: Cargo.toml
lib/xc_ast/src/: ast.rs  attr.rs  decl.rs  expr.rs  func.rs  generic.rs  id.rs  import.rs  infix_op.rs  lambda.rs  lib.rs  literal.rs  module.rs  op.rs  path.rs  pattern.rs  prefix_op.rs  ptr.rs  stmt.rs  suffix_op.rs  token.rs  tokenstream.rs  trait.rs  ty.rs
lib/xc_driver/: Cargo.toml
lib/xc_driver/src/: lib.rs
lib/xc_error/: Cargo.toml
lib/xc_error/src/: diag.rs  diag_ctx.rs  level.rs  lib.rs  msg.rs
lib/xc_lexer/src/: cursor.rs  helper.rs  lib.rs  token.rs  unescape.rs
lib/xc_macro/: Cargo.toml
lib/xc_macro/src/: lib.rs  symbol.rs
lib/xc_macro/src/diag/: diag.rs  mod.rs
lib/xc_macros/src/: lib.rs  symbol.rs
lib/xc_parse/: Cargo.toml
lib/xc_parse/src/: lib.rs  session.rs
lib/xc_parse/src/lexer/: error.rs  lexer.rs  mod.rs  tokentree.rs
lib/xc_parse/src/parser/: attr.rs  cursor.rs  diag.rs  expr.rs  func.rs  generic.rs  mod.rs  module.rs  op.rs  parser.rs  pat.rs  path.rs  stmt.rs  tests.rs  trait.rs  ty.rs
lib/xc_span/: Cargo.toml
lib/xc_span/src/: define.rs  fatal.rs  fatal_error.rs  interner.rs  lib.rs  source_file.rs  source_map.rs  symbol.rs
lib/xepl/: Cargo.toml
lib/xepl/src/: eval.rs  main.rs  store.rs  type.rs  value.rs
src/: main.rs
src/xc_ast/: Cargo.toml
src/xc_ast/src/: ast.rs  expr.rs  infix_op.rs  lib.rs  literal.rs  pattern.rs  prefix_op.rs  ptr.rs  suffix_op.rs  token.rs  ty.rs
src/xc_error/: Cargo.toml
src/xc_lexer/: Cargo.toml
src/xc_lexer/src/: cursor.rs  helper.rs  lib.rs  token.rs
src/xc_macros/: Cargo.toml
src/xc_parse/src/lexer/: lexer.rs  mod.rs
src/xc_span/: Cargo.toml
src/xc_span/src/: define.rs  interner.rs  symbol.rs
