[workspace]
members = [ "lib/xc_ast", "lib/xc_error", "lib/xc_lexer", "lib/xc_macros", "lib/xc_parse", "lib/xc_span"]

[package]
name = "xc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xc_parse = { version = "0.1.0", path = "lib/xc_parse" }
