[package]
name = "xc_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-normalization = "0.1.23"
xc_ast = { version = "0.1.0", path = "../xc_ast" }
xc_lexer = { version = "0.1.0", path = "../xc_lexer" }
xc_span = { version = "0.1.0", path = "../xc_span" }
