[package]
name = "xc_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
thin-vec = "0.2.13"
unicode-normalization = "0.1.23"
xc_ast = { version = "0.1.0", path = "../xc_ast" }
xc_error = { version = "0.1.0", path = "../xc_error" }
xc_lexer = { version = "0.1.0", path = "../xc_lexer" }
xc_span = { version = "0.1.0", path = "../xc_span" }
