[package]
name = "xc_span"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.16.0"
indexmap = "2.2.6"
md5 = { package = "md-5", version = "0.10.6" }
scoped-tls = "1.0.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
xc_macro = { version = "0.1.0", path = "../xc_macro" }
